add upload func

--- a/booking.html
+++ b/booking.html
@@ -102,7 +102,11 @@
 </body>
 
 <script src="./layui/layui.js"></script>
-
 <script src="./javascript/booking.js"></script>
+<script>
+    window.onload = function () {
+        layuiInit();
+    }
+</script>
 
 </html>
